added profile page and edit profile page. profile pic now working

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   google_fonts: ^6.1.0
+  google_sign_in: ^6.2.1
+  image_picker: ^1.0.7
+  firebase_storage: ^11.6.9
+  file_picker: ^6.2.0
 
 dev_dependencies:
   flutter_test:
