--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   image_picker: ^1.0.7
   firebase_storage: ^11.6.9
   file_picker: ^6.2.0
+  intl: ^0.19.0
+  http: ^1.2.0
+  flutter_typeahead: ^5.2.0
 
 dev_dependencies:
   flutter_test:
